--- a/index.html
+++ b/index.html
@@ -21,106 +21,118 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
-    <div class="section-top">
-      <div class="titlu-despre">
-        <h1>10,000+ of our<br> users love our<br> products.</h1>
-        <p class="intro">
-          We only provide great products combined with excellent customer service.
-          See what our satisfied customers are saying about our services.
-        </p>
-      </div>
+    <header>
+      <div class="section-top">
+        <div class="titlu-despre">
+          <h1>10,000+ of our users love our products.</h1>
+          <p class="intro">
+            We only provide great products combined with excellent customer service.
+            See what our satisfied customers are saying about our services.
+          </p>
+        </div>
       
-      <div class="reviews">
-        <div class="bloc-rev start">
-          <div class="stars">
-            <img src="./images/icon-star.svg" alt="star">
-            <img src="./images/icon-star.svg" alt="star">
-            <img src="./images/icon-star.svg" alt="star">
-            <img src="./images/icon-star.svg" alt="star">
-            <img src="./images/icon-star.svg" alt="star">
+        <div class="reviews">
+          <div class="bloc-rev start">
+            <div class="stars">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+            </div>
+            <div class="rated">
+              <p class="where">Rated 5 Stars in Reviews</p>
+            </div>
           </div>
-          <div class="rated">
-            <p class="where">Rated 5 Stars in Reviews</p>
+          <div class="bloc-rev">
+            <div class="stars">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+            </div>
+            <div class="rated">
+              <p class="where">Rated 5 Stars in Report Guru</p></div>
           </div>
-        </div>
-        <div class="bloc-rev">
-          <div class="stars">
-            <img src="./images/icon-star.svg" alt="star">
-            <img src="./images/icon-star.svg" alt="star">
-            <img src="./images/icon-star.svg" alt="star">
-            <img src="./images/icon-star.svg" alt="star">
-            <img src="./images/icon-star.svg" alt="star">
-          </div>
-          <div class="rated">
-            <p class="where">Rated 5 Stars in Report Guru</p></div>
-        </div>
-        <div class="bloc-rev end">
-          <div class="stars">
-            <img src="./images/icon-star.svg" alt="star">
-            <img src="./images/icon-star.svg" alt="star">
-            <img src="./images/icon-star.svg" alt="star">
-            <img src="./images/icon-star.svg" alt="star">
-            <img src="./images/icon-star.svg" alt="star">
-          </div>
-          <div class="rated">
-            <p class="where">Rated 5 Stars in BestTech</p>
+          <div class="bloc-rev end">
+            <div class="stars">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+            </div>
+            <div class="rated">
+              <p class="where">Rated 5 Stars in BestTech</p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="comment">
-      <div class="box-comm sus">
-        <div class="av-num-buy">
-          <div class="avatar">
-            <img src="./images/image-colton.jpg" alt="colton smith avatar">
+    </header>
+    <main>
+      <div class="comment">
+        <div class="box-comm sus">
+          <div class="av-num-buy">
+            <div class="avatar">
+              <img src="./images/image-colton.jpg" alt="colton smith">
+            </div>
+            <div class="nume-buyer">
+              <p class="nume">Colton Smith</p>
+              <p class="buyer">Verified Buyer</p>
+            </div>
           </div>
-          <div class="nume-buyer">
-            <p class="nume">Colton Smith</p>
-            <p class="buyer">Verified Buyer</p>
-          </div>
+          <blockquote>
+            <p class="recenzie">
+              "We needed the same printed design as the one we had ordered a week prior.
+              Not only did they find the original order, but we also received it in time.
+              Excellent!"
+            </p>
+          </blockquote>
         </div>
-        <p class="recenzie">
-          "We needed the same printed design as the one we had ordered a week prior.
-          Not only did they find the original order, but we also received it in time.
-          Excellent!"
-        </p>
-      </div>
-      <div class="box-comm">
-        <div class="av-num-buy">
-          <div class="avatar">
-            <img src="./images/image-irene.jpg" alt="avatar Irene">
+        <div class="box-comm">
+          <div class="av-num-buy">
+            <div class="avatar">
+              <img src="./images/image-irene.jpg" alt="Irene">
+            </div>
+            <div class="nume-buyer">
+              <p class="nume">Irene Roberts</p>
+              <p class="buyer">Verified Buyer</p>
+            </div>
           </div>
-          <div class="nume-buyer">
-            <p class="nume">Irene Roberts</p>
-            <p class="buyer">Verified Buyer</p>
-          </div>
+          <blockquote>
+            <p class="recenzie">
+              "Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."
+            </p>
+          </blockquote>
         </div>
-        <p class="recenzie">
-          "Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."
-        </p>
-      </div>
-      <div class="box-comm jos">
-        <div class="av-num-buy">
-          <div class="avatar">
-            <img src="./images/image-anne.jpg" alt="avatar anna">
+        <div class="box-comm jos">
+          <div class="av-num-buy">
+            <div class="avatar">
+              <img src="./images/image-anne.jpg" alt="anna">
+            </div>
+            <div class="nume-buyer">
+              <p class="nume">Anne Wallace</p>
+              <p class="buyer">Verified Buyer</p>
+            </div>
           </div>
-          <div class="nume-buyer">
-            <p class="nume">Anne Wallace</p>
-            <p class="buyer">Verified Buyer</p>
-          </div>
+          <blockquote>
+            <p class="recenzie">
+              "Put an order with this company and can only praise them for the very high
+              standard. Will definitely use them again and recommend them to everyone!"
+            </p>
+          </blockquote>
         </div>
-        <p class="recenzie">
-          "Put an order with this company and can only praise them for the very high
-          standard. Will definitely use them again and recommend them to everyone!"
-        </p>
       </div>
-    </div>
+    </main>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Leonte Cristian</a>.
-    </div>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Leonte Cristian</a>.
+      </div>
+    </footer>
   </body>
 </html>
